:bug: Fixed `UpdateChecker` + Backup invalid configs